Update redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="tr">
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="refresh" content="0;url=https://ligouse.com:2096/" />
+  <meta http-equiv="refresh" content="0;url=https://minimamaster.com/" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Yönlendiriliyor…</title>
   <script>
     // JS ile de anında yönlendir (meta desteklemeyen tarayıcılar için)
     (function(){
-      var target = "https://ligouse.com:2096/";
+      var target = "https://minimamaster.com/";
       try {
         window.location.replace(target);
       } catch(e) {
@@ -25,7 +25,7 @@
 <body>
   <div class="box">
     <h1>Yönlendiriliyorsunuz…</h1>
-    <p>Eğer otomatik yönlendirme olmazsa, lütfen <a href="https://ligouse.com:2096/">buraya tıklayın</a>.</p>
+    <p>Eğer otomatik yönlendirme olmazsa, lütfen <a href="https://minimamaster.com/">buraya tıklayın</a>.</p>
     <small>Adres: <code>https://ligouse.com:2096/</code></small>
   </div>
 </body>
